fix: settings alignment

--- a/frontend/src/components/workspace/users-settings/styles.module.scss
+++ b/frontend/src/components/workspace/users-settings/styles.module.scss
@@ -19,7 +19,8 @@
     padding: 1.6rem 2rem;
 
     .title {
-      font-size: 1.75rem;
+      font-size: 1.52rem;
+      margin-bottom: 0;
     }
   }
 
